<resources>
    <string name="app_name">ListView</string>
    <string name="titulo">OPCIONES</string>
    <string name="area">AREAS</string>
    <string name="volumen">Volumenes</string>
    <string name="operaciones">OPERACIONES REALIZADAS</string>
    <string name="tituloareas">AREAS</string>
    <string name="cuadrado">CUADRADO</string>
    <string name="rectangulo">RECTÁNGULO</string>
    <string name="triangulo">TRIÁNGULO</string>
    <string name="circulo">CÍRCULO</string>
    <string name="volumenes">VOLÚMENES</string>
    <string name="esfera">ESFERA</string>
    <string name="cilindro">CILINDRO</string>
    <string name="cono">CONO</string>
    <string name="cubo">CUBO</string>
    <string name="realizadas">REALIZADAS</string>
    <string name="numero">No.</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="resultados">Resultados</string>
    <string name="valor_lado">Valor del Lado</string>
    <string name="valor">Valor</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="radio">Radio</string>
    <string name="profundidad">Profundidad</string>
    <string name="calcular">CALCULAR</string>
    <string name="borrar">BORRAR</string>
    <string name="error_vacio">Ingrese un valor</string>
    <string name="salida_radio">Radio:</string>
    <string name="salida_altura">Altura:</string>
    <string name="salida_lado">Lado:</string>
    <string name="area_circulo">Area Circulo</string>
    <string name="area_cuadrado">Area Cuadrado</string>
    <string name="area_rectangulo">Area Rectangulo</string>
    <string name="salida_base">Base:</string>
    <string name="area_triangulo">Area Triángulo</string>
    <string name="volumen_cilindro">Volumen Cilindro</string>
    <string name="volumen_cono">Volumen Cono</string>
    <string name="volumen_cubo">Volumen Cubo</string>
    <string name="volumen_esfera">Volumen Esfera</string>
    <string-array name="opciones">
        <item>@string/area</item>
        <item>@string/volumenes</item>
        <item>@string/operaciones</item>
    </string-array>
    <string-array name="opciones_area">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>
    <string-array name="opciones_volumen">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>
</resources>