<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Operaciones_Realizadas">

    <TextView
        android:id="@+id/txtRealizadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realizadas"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero" />

            <TextView
                android:id="@+id/txtOperacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operacion" />

            <TextView
                android:id="@+id/txtDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultados" />

        </TableRow>

    </TableLayout>
</LinearLayout>